--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   width: 100vw;
   height: 95vh;
   overflow: hidden;
-  background-image: url(https://thumbs.gfycat.com/BraveOptimalBaleenwhale-size_restricted.gif);
+  background-color: black;
   background-repeat: no-repeat;
   background-size: cover;
 }
