--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   width: 100vw;
   height: 95vh;
   overflow: hidden;
-  background-color: black;
+  background-color: rgba(21, 176, 150, 0.15);
   background-repeat: no-repeat;
   background-size: cover;
 }
